syntax = "proto3";
import "ua/anastasiia/finesapp/commonmodels/trafficticket/traffic_ticket.proto";
import "ua/anastasiia/finesapp/commonmodels/fine/fine.proto";
package ua.anastasiia.finesapp.input.reqreply.trafficticket;
option java_package = "ua.anastasiia.finesapp.input.reqreply.trafficticket";
option java_multiple_files = true;

message AddTrafficTicketRequest {
  string car_plate = 1;
  ua.anastasiia.finesapp.commonmodels.trafficticket.TrafficTicket traffic_ticket = 2;
}

message AddTrafficTicketResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    ua.anastasiia.finesapp.commonmodels.fine.Fine fine = 1;
  }

  message Failure {
    string message = 100;
  }
}
