syntax = "proto3";

package ua.anastasiia.finesapp.output.pubsub.trafficticket;

import "ua/anastasiia/finesapp/commonmodels/fine/fine.proto";

option java_package = "ua.anastasiia.finesapp.output.pubsub.trafficticket";
option java_multiple_files = true;

message TrafficTicketAddedEvent {
  string id = 1;
  commonmodels.fine.Fine fine = 2;
}
